--- a/index.html
+++ b/index.html
@@ -36,21 +36,23 @@
 
 
 			<div class="gap-sm"></div>
-			<h2>Meet Jenny</h2>
+			<h2>Lindsey</h2>
 
-			<p>This is your quick elevator pitch to explain to people that visit your website:</p>
+			<p>Providing the simplest solution for the most complex problem.</p>
 			<ul>
-				<li><b>Who</b> you are.</li>
-                <li><b>Where</b> you live.</li>
-                <li><b>What</b> you do.</li>
-                <li>And what makes you <b>special</b>.</li>
+				<li>Meet<b>Lindsey</b>- Pensacola, Florida resident with a passion for code. </li>
+                <li>Currently an<b>adult entertainer</b> </li>
+                <li>My rules that i<b>live</b>by are: respect, honesty, & finanical freedom. </li>
+                <li>There's no one<b>more ambitious</b> & hardworkng than i am.</li>
             </ul>
 
-            <p>Having a nice photograph of you at the top of this page will certainly help personalize this website and give new people a better sense of who you are.</p>
+            <p>With my passion for programming challenges coupled with a commitment to ensuring business success I am
+              positioned well to contribute to the growth of a fast-paced, quality-driven tech team in order to build
+              better experiences on the web.</p>
 
             <hr>
 <div class="gap-sm"></div>
-            <h2>About Jenny</h2>
+            <h2>About Me.</h2>
 
             <p>Your About section is your chance to explain in greater detail who you are and why someone should hire you. Take the time to explain more about you in greater detail than you would in your introduction. The key here is balance: having enough content to engage the reader, yet not too much where you'll lose their attention span. Have I lost yours yet? :)</p>
 
