--- a/index.html
+++ b/index.html
@@ -105,9 +105,13 @@
             <p>Encourage your audience to contact you. Let them know if you are available for hire (for either full-time work or contract or both!) or just simply to chat. If you leave on vacation and this site is only run by you, then post a note that says when you'll be able to response to emails. It can also be useful to offer an expectation of when you'll get back to them in terms of hours, days, and/ or weeks (maybe you are really busy). You could also provide social media links here to help connect with your audience.</p>
 
             <p>If you don't feel comfortable sharing your home address, you could always add a general map just to help showcase your city.</p>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d49088.29941129149!2d-105.0253561!3d39.7392305!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x876b80aa231f17cf%3A0x118ef4f8278a36d6!2sDenver%2C%20Colorado!3m2!1d39.739235799999996!2d-104.990251!4m0!5e0!3m2!1sen!2sus!4v1583178471146!5m2!1sen!2sus" width="600" height="450" allowfullscreen=""></iframe>
-<div class="gap-sm"></div>
+		    <figure>
+<section class="map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110078.98259314743!2d-87.26278422176712!3d30.437003210892247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8890bf45accbaabb%3A0xa7c69a6e3179657c!2sPensacola%2C%20FL!5e0!3m2!1sen!2sus!4v1611242532035!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		    </section>
+		    </figure>
+		    <div class="gap-sm">
+     </div>
         </div>
 
     </main>
