--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Lindsey Howard : Software Developer</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/e6bb408efc.js" crossorigin="anonymous"></script>
 
 </head>
 
